2024-01-27  Karl Berry  <karl@freefriends.org>

	* tex-file.c (kpathsea_name_ok): 
	* tests/kpsesafe.test: kpse_expand (variable and ~ expansion)
	input name when needed; don't reject /dir/.foo if extended
	and it matches TEXMF[SYS]VAR, since TEXMFVAR=~/.texliveYYYY is the
	case that matters in practice. Report from Marcel.

2024-01-17  Karl Berry  <karl@freefriends.org>

	* tex-file.c (kpse_{in,out}_name_ok{,_silent}_extended):
	declare the kpse_* abbreviations of the new (and old) kpathsea_* 
	functions. LuaTeX provides both kpse.* and kpathsea.* bindings,
	so it's good to always have both.
	* tex-file.h: declare them.
	* doc/kpathsea.texi (Safe filenames): mention them.

2024-01-14  Karl Berry  <karl@freefriends.org>

	* version.ac: bump to 6.4.0/dev.

	* tex-file.h (kpathsea_{in,out}_name_ok{,_silent}_extended):
	four more declarations for extended access checks including
	TEXMF[SYS]VAR (needed for luaotfload and hence LuaLaTeX).
	* tex-file.c (abs_fname_ok): new helper fn.
	(kpathsea_name_ok): new parameter, extended.
	(kpathsea_{in,out}_ok_name{,_silent}): pass additional false arg.
	(kpathsea_{in,out}_ok_name{,_silent}{,_extended}): new fns,
	passing true.
	* kpsewhich.c (-safe-extended-in-name, -safe-extended-out-name):
	new options, corresponding variables, calls.	
	* doc/kpathsea.texi (Safe filenames): new node to document this.
	(Security): update.
	(Global font cache and security): split off new node from Security.
	* Makefile.am (TESTS): add kpsesafe.test.
	* tests/kpsesafe.test: new test.

2023-10-11  Karl Berry  <karl@tug.org>

	* texmf.cnf (shell_escape_commands): add memoize-extract.pl and .py,
	after analysis on tlsecurity. https://ctan.org/pkg/memoize

2023-10-09  Karl Berry  <karl@freefriends.org>

	* tex-file.c (kpathsea_name_ok): also allow files under
	the TEXMF_OUTPUT_DIRECTORY envvar.
	* tex-make.c (misstex): first try writing missfont.log in
	TEXMF_OUTPUT_DIRECTORY, if it's set. Update unit test.